--- a/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
@@ -26,10 +26,10 @@
     [Parameter]
     public Team team { get; set; } = new();
 
-    private void Submit()
+    private async Task Submit()
     {
         // TODO: Function call just adds it here, but we want to actually store it!
-        TeamService.CreateTeam(team);
+        await TeamService.CreateTeam(team);
 
         TeamDialog?.Close(DialogResult.Ok(team));
     }
