--- a/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
@@ -45,10 +45,10 @@
     [Parameter]
     public Trait trait { get; set; } = new();
 
-    private void Submit()
+    private async Task Submit()
     {
         // TODO: Function call just adds it here, but we want to actually store it!
-        TraitService.CreateTrait(trait);
+        await TraitService.CreateTrait(trait);
 
         TraitDialog?.Close(DialogResult.Ok(trait));
     }
