Made an implementation of strategies (it works by the way!)

--- a/SimTECH/SimTECH/Pages/Factors/Strategies.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Strategies.razor
@@ -1,6 +1,4 @@
 ﻿@page "/strategies"
-@layout FactorLayout
-
 @inject StrategyService StrategyService
 @inject IDialogService DialogService
 
@@ -105,7 +103,7 @@
 
         if (!result.Canceled && result.Data != null && result.Data is Strategy newStrategy)
         {
-            //StrategyNames.Add(newStrategy);
+            StrategyNames.Add(newStrategy);
         }
     }
 
