--- a/SimTECH/SimTECH/Shared/FactorLayout.razor
+++ b/SimTECH/SimTECH/Shared/FactorLayout.razor
@@ -1,6 +1,8 @@
 ﻿@inherits LayoutComponentBase
 @layout MainLayout
 
+@*NOTE: Disabled until i'm sure what to do with this, perhaps by not using the layout at all*@
+
 <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large" Class="ma-10">
     <MudButton Href="/manufacturers" StartIcon="@Icons.Material.Outlined.PeopleAlt" IconColor="Color.Surface">Manufacturers</MudButton>
     <MudButton Href="/strategies" StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary">Strategies</MudButton>
