--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<MudNavMenu>
+﻿<MudNavMenu Color="Color.Tertiary">
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.Uncategorized.ChessKing">Leagues</MudNavLink>
     <MudNavGroup Title="Entrants" Icon="@Icons.Material.Filled.Settings" IconColor="Color.Warning">
@@ -9,9 +9,9 @@
         <MudNavLink Href="/tracks" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AddRoad">Tracks</MudNavLink>
         <MudNavLink Href="/traits" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.FlashOn">Traits</MudNavLink>
     </MudNavGroup>
-    <MudNavGroup Title="Race factors" Icon="fas fa-gas-pump">
-        <MudNavLink Href="/manufacturers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.PeopleAlt">Manufacturers</MudNavLink>
-        <MudNavLink Href="/strategies" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.PeopleAlt">Strategies</MudNavLink>
+    <MudNavGroup Title="Race factors" Icon="@Icons.Material.Filled.LocalGasStation">
+        <MudNavLink Href="/manufacturers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Garage">Manufacturers</MudNavLink>
+        <MudNavLink Href="/strategies" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.GasMeter">Strategies</MudNavLink>
     </MudNavGroup>
     <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
 </MudNavMenu>
