--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -6,12 +6,12 @@
 <PageTitle>Leagues</PageTitle>
 
 <MudContainer>
-    <MudPaper Class="d-flex align-center pa-2 mx-2 my-2">
+    <MudPaper Class="d-flex justify-space-between pa-2 mx-2 my-2">
         <MudText Typo="Typo.h4">Leagues</MudText>
-        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="EditLeague">New</MudButton>
+        <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddLeague">New</MudButton>
     </MudPaper>
     <MudDataGrid T="League" Items="@leagueData" ReadOnly="@_readOnly" EditMode="DataGridEditMode.Cell" CommittedItemChanges="ModifyLeague"
-        Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.OnRowClick">
+                Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.OnRowClick">
         <Columns>
             <Column T="League" Field="Name" />
             <Column T="League" Field="State" IsEditable="false" />
@@ -31,7 +31,6 @@
 
 @code {
     private bool _readOnly = false;
-    
     private List<League> leagueData = new();
 
     protected override async Task OnInitializedAsync()
@@ -45,7 +44,7 @@
         await LeagueService.UpdateLeague(item);
     }
 
-    async Task EditLeague()
+    async Task AddLeague()
     {
         var dialog = await DialogService.ShowAsync<LeagueEditor>("Create a new league");
         var result = await dialog.Result;
